# software-rasterizer

./: .gitignore  CMakeLists.txt  README.md
input/: cube.mtl
src/: camera.h  color.cpp  color.h  driver.cpp  model.cpp  model.h  point.cpp  point.h  point3.cpp  point3.h  rasterizerconfig.h.in  rendertarget.h  transform.cpp  transform.h  triangle.cpp  triangle.h  utils.cpp  utils.h
